objects/Account__x.object
<CustomObject>
    <fields>
        <fullName>Division_c__c</fullName>
        <externalDeveloperName>Division__c</externalDeveloperName>
        <label>Division</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>010</fullName>
                    <label>010 - Diagnostic</label>
                </value>
                <value>
                    <fullName>020</fullName>
                    <label>020 - POL</label>
                </value>
                <value>
                    <fullName>040</fullName>
                    <label>040 - Food</label>
                </value>
                <value>
                    <fullName>050</fullName>
                    <label>050 - Pharma</label>
                </value>
                <value>
                    <fullName>030</fullName>
                    <label>030 - Blood Bank</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EHEC_c__c</fullName>
        <externalDeveloperName>EHEC__c</externalDeveloperName>
        <label>EHEC</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESS_revenue_immunology_divided_c__c</fullName>
        <externalDeveloperName>ESS_revenue_immunology_divided__c</externalDeveloperName>
        <label>ESS revenue immunology divided</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ESS_revenue_microbiology_divided_c__c</fullName>
        <externalDeveloperName>ESS_revenue_microbiology_divided__c</externalDeveloperName>
        <label>ESS revenue microbiology divided</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ESS_revenue_molecular_divided_c__c</fullName>
        <externalDeveloperName>ESS_revenue_molecular_divided__c</externalDeveloperName>
        <label>ESS revenue molecular divided</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ESS_revenue_sales_divided_c__c</fullName>
        <externalDeveloperName>ESS_revenue_sales_divided__c</externalDeveloperName>
        <label>ESS revenue sales divided</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ESS_revenue_services_divided_c__c</fullName>
        <externalDeveloperName>ESS_revenue_services_divided__c</externalDeveloperName>
        <label>ESS revenue services divided</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EZ_Partner_c__c</fullName>
        <externalDeveloperName>EZ_Partner__c</externalDeveloperName>
        <label>ZE_Partner</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endotoxin_c__c</fullName>
        <externalDeveloperName>Endotoxin__c</externalDeveloperName>
        <label>Endotoxin</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Environmental_monitoring_c__c</fullName>
        <externalDeveloperName>Environmental_monitoring__c</externalDeveloperName>
        <label>Environmental monitoring</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID_c__c</fullName>
        <externalDeveloperName>External_ID__c</externalDeveloperName>
        <label>External ID</label>
        <length>250</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <externalDeveloperName>Fax</externalDeveloperName>
        <label>Account Fax</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_Ends_c__c</fullName>
        <externalDeveloperName>Fiscal_Year_Ends__c</externalDeveloperName>
        <label>Fiscal Year Ends</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jan</fullName>
                </value>
                <value>
                    <fullName>Feb</fullName>
                </value>
                <value>
                    <fullName>Mar</fullName>
                </value>
                <value>
                    <fullName>Apr</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>Jun</fullName>
                </value>
                <value>
                    <fullName>Jul</fullName>
                </value>
                <value>
                    <fullName>Aug</fullName>
                </value>
                <value>
                    <fullName>Sep</fullName>
                </value>
                <value>
                    <fullName>Oct</fullName>
                </value>
                <value>
                    <fullName>Nov</fullName>
                </value>
                <value>
                    <fullName>Dec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geosector_c__c</fullName>
        <externalDeveloperName>Geosector__c</externalDeveloperName>
        <label>Geosector</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GlobRepHierL1SAP_c__c</fullName>
        <externalDeveloperName>GlobRepHierL1SAP__c</externalDeveloperName>
        <label>Global Reporting Hierarchy - L1 SAP #</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GlobRepHierL2SAP_c__c</fullName>
        <externalDeveloperName>GlobRepHierL2SAP__c</externalDeveloperName>
        <label>Global Reporting Hierarchy - L2 SAP #</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GlobRepHierL3SAP_c__c</fullName>
        <externalDeveloperName>GlobRepHierL3SAP__c</externalDeveloperName>
        <label>Global Reporting Hierarchy - L3 SAP #</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Global_Reporting_Hierarchy_Level_1_c__c</fullName>
        <externalDeveloperName>Global_Reporting_Hierarchy_Level_1__c</externalDeveloperName>
        <label>Global Reporting Hierarchy - Level 1</label>
        <length>18</length>
        <referenceTo>Account__x</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Global_Reporting_Hierarchy_Level_2_c__c</fullName>
        <externalDeveloperName>Global_Reporting_Hierarchy_Level_2__c</externalDeveloperName>
        <label>Global Reporting Hierarchy - Level 2</label>
        <length>18</length>
        <referenceTo>Account__x</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Global_Reporting_Hierarchy_Level_3_c__c</fullName>
        <externalDeveloperName>Global_Reporting_Hierarchy_Level_3__c</externalDeveloperName>
        <label>Global Reporting Hierarchy - Level 3</label>
        <length>18</length>
        <referenceTo>Account__x</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>HasChild_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>HasChild__c</externalDeveloperName>
        <label>HasChild</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HospitalLevel_c__c</fullName>
        <externalDeveloperName>HospitalLevel__c</externalDeveloperName>
        <label>Hospital Level</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>G1</fullName>
                </value>
                <value>
                    <fullName>G1A</fullName>
                </value>
                <value>
                    <fullName>G1B</fullName>
                </value>
                <value>
                    <fullName>G1C</fullName>
                </value>
                <value>
                    <fullName>G2</fullName>
                </value>
                <value>
                    <fullName>G2A</fullName>
                </value>
                <value>
                    <fullName>G2B</fullName>
                </value>
                <value>
                    <fullName>G2C</fullName>
                </value>
                <value>
                    <fullName>G3</fullName>
                </value>
                <value>
                    <fullName>G3A</fullName>
                </value>
                <value>
                    <fullName>G3B</fullName>
                </value>
                <value>
                    <fullName>G3C</fullName>
                </value>
                <value>
                    <fullName>Private Hospital</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Immunology_ESS_Rreagent_RevenueN_1_c__c</fullName>
        <externalDeveloperName>Immunology_ESS_Rreagent_RevenueN_1__c</externalDeveloperName>
        <label>Immunology ESS Rreagent RevenueN-1</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Immunology_Sales_Accessible_Market_c__c</fullName>
        <externalDeveloperName>Immunology_Sales_Accessible_Market__c</externalDeveloperName>
        <label>Immunology Sales Accessible Market</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inactive_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Inactive__c</externalDeveloperName>
        <label>Inactive</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InactiveonCompanycode_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>InactiveonCompanycode__c</externalDeveloperName>
        <label>InactiveonCompanycode</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incoterm1_c__c</fullName>
        <externalDeveloperName>Incoterm1__c</externalDeveloperName>
        <label>Incoterm 1</label>
        <length>20</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterm2_c__c</fullName>
        <externalDeveloperName>Incoterm2__c</externalDeveloperName>
        <label>Incoterm 2</label>
        <length>20</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterms_c__c</fullName>
        <externalDeveloperName>Incoterms__c</externalDeveloperName>
        <inlineHelpText>CFR-Prepaid and add (Customer pays some form of freight)
FCA-No charge Freight (Customer pays no shipping or handling)
DDP-Third Party Freight (Freight is billed to the customer provided freight account. BioMérieux may charge the handling fee directly)</inlineHelpText>
        <label>Incoterms</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <externalDeveloperName>Industry</externalDeveloperName>
        <label>Industry</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Beverage</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Machinery</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Not For Profit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Recreation</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Telecommunications</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDistributorCategory_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDistributorCategory__c</externalDeveloperName>
        <label>Is Distributor Category</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPartner__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsPartner</externalDeveloperName>
        <label>Partner Account</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsVatMandatory_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsVatMandatory__c</externalDeveloperName>
        <label>Is Vat Mandatory</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JigsawCompanyId__c</fullName>
        <externalDeveloperName>JigsawCompanyId</externalDeveloperName>
        <label>Jigsaw Company ID</label>
        <length>20</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jigsaw__c</fullName>
        <externalDeveloperName>Jigsaw</externalDeveloperName>
        <label>Data.com Key</label>
        <length>20</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Account_Hierarchy_c__c</fullName>
        <externalDeveloperName>Key_Account_Hierarchy__c</externalDeveloperName>
        <label>Global Reporting Hierarchy - Level 4</label>
        <length>18</length>
        <referenceTo>Account__x</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts3</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>LabPotentialAccessibleMarket_c__c</fullName>
        <externalDeveloperName>LabPotentialAccessibleMarket__c</externalDeveloperName>
        <inlineHelpText>Lab Potential Accessible Market per year in local currency</inlineHelpText>
        <label>Lab Potential Accessible Market</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Language_c__c</fullName>
        <externalDeveloperName>Language__c</externalDeveloperName>
        <label>Language</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AF</fullName>
                    <label>Afrikaans</label>
                </value>
                <value>
                    <fullName>AR</fullName>
                    <label>Arabic</label>
                </value>
                <value>
                    <fullName>Z1</fullName>
                    <label>bMx Internal Txt</label>
                </value>
                <value>
                    <fullName>BG</fullName>
                    <label>Bulgarian</label>
                </value>
                <value>
                    <fullName>CA</fullName>
                    <label>Catalan</label>
                </value>
                <value>
                    <fullName>ZH</fullName>
                    <label>Chinese</label>
                </value>
                <value>
                    <fullName>ZF</fullName>
                    <label>Chinese trad.</label>
                </value>
                <value>
                    <fullName>HR</fullName>
                    <label>Croatian</label>
                </value>
                <value>
                    <fullName>CS</fullName>
                    <label>Czech</label>
                </value>
                <value>
                    <fullName>DA</fullName>
                    <label>Danish</label>
                </value>
                <value>
                    <fullName>NL</fullName>
                    <label>Dutch</label>
                </value>
                <value>
                    <fullName>EN</fullName>
                    <label>English</label>
                </value>
                <value>
                    <fullName>ET</fullName>
                    <label>Estonian</label>
                </value>
                <value>
                    <fullName>FI</fullName>
                    <label>Finnish</label>
                </value>
                <value>
                    <fullName>FR</fullName>
                    <label>French</label>
                </value>
                <value>
                    <fullName>DE</fullName>
                    <label>German</label>
                </value>
                <value>
                    <fullName>EL</fullName>
                    <label>Greek</label>
                </value>
                <value>
                    <fullName>HE</fullName>
                    <label>Hebrew</label>
                </value>
                <value>
                    <fullName>HU</fullName>
                    <label>Hungarian</label>
                </value>
                <value>
                    <fullName>IS</fullName>
                    <label>Icelandic</label>
                </value>
                <value>
                    <fullName>ID</fullName>
                    <label>Indonesian</label>
                </value>
                <value>
                    <fullName>IT</fullName>
                    <label>Italian</label>
                </value>
                <value>
                    <fullName>JA</fullName>
                    <label>Japanese</label>
                </value>
                <value>
                    <fullName>KO</fullName>
                    <label>Korean</label>
                </value>
                <value>
                    <fullName>LV</fullName>
                    <label>Latvian</label>
                </value>
                <value>
                    <fullName>LT</fullName>
                    <label>Lithuanian</label>
                </value>
                <value>
                    <fullName>MS</fullName>
                    <label>Malaysian</label>
                </value>
                <value>
                    <fullName>NO</fullName>
                    <label>Norwegian</label>
                </value>
                <value>
                    <fullName>PL</fullName>
                    <label>Polish</label>
                </value>
                <value>
                    <fullName>PT</fullName>
                    <label>Portuguese</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastActivityDate__c</fullName>
        <externalDeveloperName>LastActivityDate</externalDeveloperName>
        <label>Last Activity</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <externalDeveloperName>LastReferencedDate</externalDeveloperName>
        <label>Last Referenced Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <externalDeveloperName>LastViewedDate</externalDeveloperName>
        <label>Last Viewed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legal_Structure_c__c</fullName>
        <externalDeveloperName>Legal_Structure__c</externalDeveloperName>
        <label>Legal Structure</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Struct</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Listeria_c__c</fullName>
        <externalDeveloperName>Listeria__c</externalDeveloperName>
        <label>Listeria</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_c__c</fullName>
        <externalDeveloperName>Market__c</externalDeveloperName>
        <inlineHelpText>If not filled, Market and Division fields will be auto-populated from the current user profile.</inlineHelpText>
        <label>Market</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0010</fullName>
                    <label>0010 - Clinical</label>
                </value>
                <value>
                    <fullName>0020</fullName>
                    <label>0020 - Industry</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MasterRecordId__c</fullName>
        <externalDeveloperName>MasterRecordId</externalDeveloperName>
        <label>Master Record ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Microbiology_ESS_Rreagent_RevenueN_1_c__c</fullName>
        <externalDeveloperName>Microbiology_ESS_Rreagent_RevenueN_1__c</externalDeveloperName>
        <label>Microbiology ESS Rreagent RevenueN-1</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Microbiology_Sales_Accessible_Market_c__c</fullName>
        <externalDeveloperName>Microbiology_Sales_Accessible_Market__c</externalDeveloperName>
        <label>Microbiology Sales Accessible Market</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ModificationStatus_c__c</fullName>
        <externalDeveloperName>ModificationStatus__c</externalDeveloperName>
        <label>Modification Status</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Validate</fullName>
                </value>
                <value>
                    <fullName>Reset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Molecular_ESS_Rreagent_RevenueN_1_c__c</fullName>
        <externalDeveloperName>Molecular_ESS_Rreagent_RevenueN_1__c</externalDeveloperName>
        <label>Molecular ESS Rreagent RevenueN-1</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Molecular_Sales_Accessible_Market_c__c</fullName>
        <externalDeveloperName>Molecular_Sales_Accessible_Market__c</externalDeveloperName>
        <label>Molecular Sales Accessible Market</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mycoplasma_testing_c__c</fullName>
        <externalDeveloperName>Mycoplasma_testing__c</externalDeveloperName>
        <label>Mycoplasma</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfEmployees__c</fullName>
        <externalDeveloperName>NumberOfEmployees</externalDeveloperName>
        <label>Employees</label>
        <precision>8</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfEnvironmentalControl_c__c</fullName>
        <externalDeveloperName>NumberOfEnvironmentalControl__c</externalDeveloperName>
        <inlineHelpText>per Year</inlineHelpText>
        <label>Number of Environmental control</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfFungal_c__c</fullName>
        <externalDeveloperName>NumberOfFungal__c</externalDeveloperName>
        <inlineHelpText>per Year</inlineHelpText>
        <label>Number of Fungal</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfPathogens_c__c</fullName>
        <externalDeveloperName>NumberOfPathogens__c</externalDeveloperName>
        <inlineHelpText>per Year</inlineHelpText>
        <label>Number of Pathogens</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfQualityInidicators_c__c</fullName>
        <externalDeveloperName>NumberOfQualityInidicators__c</externalDeveloperName>
        <inlineHelpText>per Year</inlineHelpText>
        <label>Number of quality inidicators</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfSterility_c__c</fullName>
        <externalDeveloperName>NumberOfSterility__c</externalDeveloperName>
        <inlineHelpText>per Year</inlineHelpText>
        <label>Number of Sterility</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfTests_c__c</fullName>
        <externalDeveloperName>NumberOfTests__c</externalDeveloperName>
        <inlineHelpText>per Year</inlineHelpText>
        <label>Number of Tests</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfTotalFlora_c__c</fullName>
        <externalDeveloperName>NumberOfTotalFlora__c</externalDeveloperName>
        <inlineHelpText>per Year</inlineHelpText>
        <label>Number of Total Flora</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofBeds_c__c</fullName>
        <externalDeveloperName>NumberofBeds__c</externalDeveloperName>
        <label>Number of Beds</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofCriticalCareBeds_c__c</fullName>
        <externalDeveloperName>NumberofCriticalCareBeds__c</externalDeveloperName>
        <label>Number of Critical Care Beds</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofPatients_c__c</fullName>
        <externalDeveloperName>NumberofPatients__c</externalDeveloperName>
        <label>Number of Patients</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OTIF_c__c</fullName>
        <externalDeveloperName>OTIF__c</externalDeveloperName>
        <label>%OTIF</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Old_Customer_Number_c__c</fullName>
        <externalDeveloperName>Old_Customer_Number__c</externalDeveloperName>
        <label>Old Customer Number</label>
        <length>10</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OperatingHoursId__c</fullName>
        <externalDeveloperName>OperatingHoursId</externalDeveloperName>
        <label>Operating Hour ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>Owner ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerIsPartnerUser_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>OwnerIsPartnerUser__c</externalDeveloperName>
        <label>TECH - Owner Is a Partner User</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <externalDeveloperName>Ownership</externalDeveloperName>
        <label>Ownership</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Subsidiary</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>